# DevPro-Orchestrator

./: .gitignore  Dockerfile.api  README copy.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml
docs/: AGENT_TESTING_GUIDE.md  SYSTEM_OVERVIEW.md
frontend/: Dockerfile  package-lock.json
frontend/src/: App.jsx  index.css
src/: __init__.py  api.py  cli.py  config.py  database.py  supervisor.py  supervisor_executor.py  task_manager.py
src/agents/: __init__.py  coding_agent.py  documentation_agent.py  research_agent.py  testing_agent.py
src/config/: agents.yaml  orchestrator.yaml
src/core/: __init__.py  agent_protocol.py  agent_registry.py  orchestrator.py  state.py
src/database/: implementation_tracker.db  implementation_tracker.db-shm  implementation_tracker.db-wal
src/integrations/: README.md  __init__.py  crawl4ai_client.py  exa_client.py
src/prompts/: agent_prompts.yaml
src/repositories/: __init__.py  base.py  task_repository.py
src/schemas/: __init__.py  database.py  transformations.py  unified_models.py
src/services/: __init__.py  task_service.py
src/utils/: __init__.py  task_calculations.py
